filter deleted activities & fix title overflow

--- a/global_components/ActivityCard/ActivityCard.module.scss
+++ b/global_components/ActivityCard/ActivityCard.module.scss
@@ -31,6 +31,9 @@
       display: grid;
       p {
         font-size: $font-small;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden;
       }
     }
   }
